Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4838

Test failure sanity-lfsck test_9a: Expect 'completed', but got 'scanning-phase1'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.6.0
    • Lustre 2.6.0
    • 3
    • 13334

      This issue was created by maloo for Nathaniel Clark <nathaniel.l.clark@intel.com>

      This issue relates to the following test suite run:
      http://maloo.whamcloud.com/test_sets/d85bf2be-b859-11e3-9273-52540035b04c.

      The sub-test test_9a failed with the following error:

      (7) Expect 'completed', but got 'scanning-phase1'

      Info required for matching: sanity-lfsck 9a

            wc-triage WC Triage
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: